--- a/src/app/contacts-grid/contacts-item/contacts-item.component.html
+++ b/src/app/contacts-grid/contacts-item/contacts-item.component.html
@@ -1,11 +1,11 @@
-<article class="contact" *ngFor="let contact of contacts">
+<article class="contact">
     <span class="contact__avatar">
-      <img src="{{contact.avatar}}" alt="avatar" />
+      <img src="{{avatar}}" />
     </span>
-    <span class="contact__data">{{contact.name}}</span>
-    <span class="contact__data">{{contact.phone}}</span>
-    <span class="contact__data">{{contact.country}}</span>
-    <span class="contact__data">{{contact.admissionDate}}</span>
-    <span class="contact__data">{{contact.company}}</span>
-    <span class="contact__data">{{contact.department}}</span>
+    <span class="contact__data">{{name}}</span>
+    <span class="contact__data">{{phone}}</span>
+    <span class="contact__data">{{country}}</span>
+    <span class="contact__data">{{admissionDate}}</span>
+    <span class="contact__data">{{company}}</span>
+    <span class="contact__data">{{department}}</span>
 </article>
