--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,29 +1,25 @@
 <div class="container">
     <section class="filters">
         <div class="filters__search">
-            <input class="filters__search__input" type="text" placeholder="Pesquisar" />
+            <input class="filters__search__input" type="text"
+                   placeholder="Pesquisar" (keyup)="filterContactList($event)"/>
             <button class="filters__search__icon">
                 <fa-icon [icon]="faSearch"></fa-icon>
             </button>
         </div>
-
-        <button class="filters__item is-selected">
+        <button class="filters__item is-selected" (click)="orderByName()">
             Nome
         </button>
-
-        <button class="filters__item">
+        <button class="filters__item" (click)="orderByCountry()">
             País
         </button>
-
-        <button class="filters__item">
+        <button class="filters__item" (click)="orderByCompany()">
             Empresa
         </button>
-
-        <button class="filters__item">
+        <button class="filters__item" (click)="orderByDepartament()">
             Departamento
         </button>
-
-        <button class="filters__item">
+        <button class="filters__item" (click)="orderByAdmissionDate()">
             Data de admissão
         </button>
     </section>
