--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -49,5 +49,21 @@
         margin: 0 8px;
         padding: 10px;
         white-space: nowrap;
+        &--select {
+            align-items: center;
+            background-color: #4C84FF;
+            border-radius: 5px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 2px rgba(0, 0, 0, 0.07);
+            color: #fff;
+            display: flex;
+            flex-wrap: nowrap;
+            font-size: 1.3rem;
+            font-weight: normal;
+            justify-content: center;
+            margin: 0 8px;
+            padding: 10px;
+            white-space: nowrap;
+        }
     }
 }
